2002-03-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/ConfigFvwmDefaults:
	RightTitleRotatedCW is a default

2002-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_get_title_bar_dimensions):
	fixed order of right buttons
	(frame_move_resize_step):
	reduced flashing when maximizing

	* fvwm/geometry.c (update_absolute_geometry):
	adapted for horizontal shading

2002-03-19  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/borders.c:
	* fvwm/builtins.c:
	* fvwm/fvwm.h:
	* fvwm/geometry.c:
	* libs/Fft.c:
	* libs/Flocale.c:
	* libs/Flocale.h:
	several renamings of text_direction to text_rotation

2002-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/windowshade.c (CMD_WindowShade):
	* fvwm/frame.c (frame_create_move_resize_args):
	(frame_move_resize_step):
	hack to enable non-animated window shading for the time being

	* fvwm/style.c (parse_and_set_window_style):
	(parse_and_set_window_style):
	allow to abbreviate [Counter]ClockWise with [C]CW

	* fvwm/frame.c (frame_move_resize_step):
	fixed

	* fvwm/geometry.c (gravity_constrain_size):
	removed useless code

	* fvwm/update.c (apply_window_updates):
	* fvwm/add_window.c (AddWindow):
	* fvwm/move_resize.c (unmaximize_fvwm_window):
	(resize_window):
	do not write into frame_g. only frame.c should do this

	* libs/defaults.h (MIN_WINDOW_TITLEBUTTON_LENGTH):
	(MIN_WINDOW_TITLE_LENGTH):
	new default values
	* fvwm/frame.c (frame_setup_title_bar):
	(get_resize_decor_gravities_one_axis):
	(frame_setup_window_internal):
	(frame_move_resize_step):
	(frame_create_move_resize_args):
	rewrote frame_setup_title_bar function

	* fvwm/add_window.c (setup_frame_stacking):
	fixed title bar stacking order

	* fvwm/frame.c (frame_setup_title_bar):
	removed yesterday's 'fix'

	* fvwm/add_window.c (hide_screen):
	(setup_title_window):
	(setup_resize_handle_windows):
	(setup_button_windows):
	fixed visual and depth of decoration windows

2002-03-18  Dominik Vogt  <dominik.vogt@gmx.de>
